fixes issues w/ CSS alignment

--- a/src/Extra.css
+++ b/src/Extra.css
@@ -9,6 +9,11 @@ html * {
     width: 100%;
 }
 
+
+.article-picture {
+    padding-left: 0;
+}
+
 .article-picture:hover {
     opacity: .75;
 }
